--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -32,7 +32,7 @@ concurrency:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read  # Read access to repository contents
+  contents: write  # Read access to repository contents
   pages: write    # Write access to GitHub Pages
   id-token: write # Write access to ID tokens
 
